--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="anonflow-shield-transfer" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <!-- <link rel="icon" type="image/png" href="../" /> -->
+    <link rel="icon" type="image/png" href="./public/image.png" />
   </head>
 
   <body>
